profile route is added

--- a/src/app/components/reusable_components/header-component/header-component.html
+++ b/src/app/components/reusable_components/header-component/header-component.html
@@ -49,7 +49,7 @@
           {{ authSessionService.email() }}
         </div>
 
-        <button mat-menu-item>
+        <button mat-menu-item routerLink="/dashboard/profile">
           <mat-icon>person</mat-icon>
           Profile
         </button>
