--- a/src/app/components/page_components/dashboard_components/nav_components/product-nav-component/product-nav-component.html
+++ b/src/app/components/page_components/dashboard_components/nav_components/product-nav-component/product-nav-component.html
@@ -2,18 +2,15 @@
 
     <!-- ================= FORM ================= -->
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <app-dashboard-form-component [submitLabel]="isEditMode() ? 'Update' : 'Save'"
-            [submitDisabled]="isViewMode() || (submitted && form.invalid)" (cancel)="cancel()">
+        <app-dashboard-form-component [submitLabel]="isEditMode() ? 'Update' : 'Save'" [submitDisabled]="isViewMode() || (submitted && form.invalid)" (cancel)="cancel()">
 
             <!-- Product Name -->
             <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Product Name</mat-label>
                 <input matInput formControlName="electronicItemName" />
+                
                 <mat-error *ngIf="electronicItemNameCtrl.hasError('required')">
                     Product name is required
-                </mat-error>
-                <mat-error *ngIf="electronicItemNameCtrl.hasError('pattern')">
-                    Only letters and spaces allowed
                 </mat-error>
             </mat-form-field>
 
@@ -21,6 +18,7 @@
             <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Price (Rs.)</mat-label>
                 <input matInput type="number" formControlName="price" />
+                
                 <mat-error *ngIf="form.get('price')?.hasError('required')">
                     Price is required
                 </mat-error>
@@ -30,6 +28,10 @@
             <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Quantity On Hand</mat-label>
                 <input matInput type="number" formControlName="qoh" />
+
+                <mat-error *ngIf="form.get('qoh')?.hasError('required')">
+                    QOH is required
+                </mat-error>
             </mat-form-field>
 
             <!-- Brand -->
@@ -40,6 +42,7 @@
                         {{ brand.brandName }}
                     </mat-option>
                 </mat-select>
+                
                 <mat-error *ngIf="form.get('brandId')?.hasError('required')">
                     Brand is required
                 </mat-error>
@@ -53,6 +56,7 @@
                         {{ category.categoryName }}
                     </mat-option>
                 </mat-select>
+                
                 <mat-error *ngIf="form.get('categoryId')?.hasError('required')">
                     Category is required
                 </mat-error>
@@ -62,7 +66,6 @@
             <div class="image-upload">
 
                 <button mat-raised-button color="primary" type="button" (click)="fileInput.click()">
-
                     <mat-icon>upload</mat-icon>
                     Choose Image
                 </button>
@@ -78,7 +81,6 @@
                 <div class="image-preview" *ngIf="imagePreview">
                     <img [src]="imagePreview" />
                 </div>
-
             </div>
         </app-dashboard-form-component>
     </form>
