--- a/src/app/components/page_components/dashboard_components/nav_components/product-nav-component/product-nav-component.html
+++ b/src/app/components/page_components/dashboard_components/nav_components/product-nav-component/product-nav-component.html
@@ -37,13 +37,13 @@
             <!-- Brand -->
             <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Brand</mat-label>
-                <mat-select formControlName="brandId">
+                <mat-select formControlName="brandID">
                     <mat-option *ngFor="let brand of brands()" [value]="brand.brandID">
                         {{ brand.brandName }}
                     </mat-option>
                 </mat-select>
                 
-                <mat-error *ngIf="form.get('brandId')?.hasError('required')">
+                <mat-error *ngIf="form.get('brandID')?.hasError('required')">
                     Brand is required
                 </mat-error>
             </mat-form-field>
@@ -51,13 +51,13 @@
             <!-- Category -->
             <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Category</mat-label>
-                <mat-select formControlName="categoryId">
+                <mat-select formControlName="categoryID">
                     <mat-option *ngFor="let category of categories()" [value]="category.categoryID">
                         {{ category.categoryName }}
                     </mat-option>
                 </mat-select>
                 
-                <mat-error *ngIf="form.get('categoryId')?.hasError('required')">
+                <mat-error *ngIf="form.get('categoryID')?.hasError('required')">
                     Category is required
                 </mat-error>
             </mat-form-field>
