--- a/src/app/components/page_components/auth_components/register-component/register-component.html
+++ b/src/app/components/page_components/auth_components/register-component/register-component.html
@@ -4,6 +4,48 @@
         <h2 class="auth-title">Register</h2>
 
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <!-- NAME -->
+            <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Name</mat-label>
+                <input matInput formControlName="name">
+
+                <mat-error *ngIf="nameCtrl.hasError('required') && (nameCtrl.touched || nameCtrl.dirty)">
+                    Name is required
+                </mat-error>
+
+                <mat-error *ngIf="nameCtrl.hasError('pattern') && (nameCtrl.touched || nameCtrl.dirty)">
+                    Only letters and spaces allowed
+                </mat-error>
+            </mat-form-field>
+
+            <!-- PHONE NO -->
+            <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Phone</mat-label>
+                <input matInput formControlName="phoneNo">
+
+                <mat-error *ngIf="phoneNoCtrl.hasError('required') && (phoneNoCtrl.touched || phoneNoCtrl.dirty)">
+                    Phone No is required
+                </mat-error>
+
+                <mat-error *ngIf="phoneNoCtrl.hasError('pattern') && (phoneNoCtrl.touched || phoneNoCtrl.dirty)">
+                    10-digit phone number is allowed
+                </mat-error>
+            </mat-form-field>
+
+            <!-- ADDRESS -->
+            <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Address</mat-label>
+                <input matInput formControlName="address">
+
+                <mat-error *ngIf="addressCtrl.hasError('required') && (addressCtrl.touched || addressCtrl.dirty)">
+                    Address is required
+                </mat-error>
+
+                <mat-error *ngIf="addressCtrl.hasError('pattern') && (addressCtrl.touched || addressCtrl.dirty)">
+                    Only letters and spaces allowed
+                </mat-error>
+            </mat-form-field>
+
             <!-- EMAIL -->
             <mat-form-field appearance="outline" class="auth-input">
                 <mat-label>Email</mat-label>
