--- a/src/app/common_styles/elements/component_container_style.scss
+++ b/src/app/common_styles/elements/component_container_style.scss
@@ -7,7 +7,7 @@
 }
 
 .app-element-wrapper {
-  background-color: #fbfcff;
+  background-color: #D9D9E6; 
   padding: 32px;
   border-radius: 16px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
