--- a/src/app/components/page_components/dashboard_components/nav_components/employee-nav-component/employee-nav-component.html
+++ b/src/app/components/page_components/dashboard_components/nav_components/employee-nav-component/employee-nav-component.html
@@ -13,7 +13,7 @@
                 </mat-error>
             </mat-form-field>
 
-            <mat-form-field appearance="outline" class="auth-input">
+            <mat-form-field *ngIf="!isEditMode()" appearance="outline" class="auth-input">
                 <mat-label>Email</mat-label>
                 <input matInput formControlName="email" />
 
@@ -27,7 +27,7 @@
             </mat-form-field>
 
             <!-- PASSWORD -->
-            <mat-form-field appearance="outline" class="auth-input">
+            <mat-form-field *ngIf="isCreateMode()" appearance="outline" class="auth-input">
                 <mat-label>Password</mat-label>
                 <input matInput type="password" formControlName="password" />
 
